# DepGuardian

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-backend.yml
DepGuardian/: __init__.py  __main__.py  agent.py  task_manager.py
DepGuardian/.well-known/: agent.json
DepGuardian/agents/analyzer/: agent.py  prompt.py
DepGuardian/agents/analyzer/.well-known/: agent.json
DepGuardian/agents/fetcher/: agent.py
DepGuardian/agents/fetcher/.well-known/: agent.json
DepGuardian/agents/fetcher/tools/: fetch_metadata.py  set_dependencies.py
DepGuardian/agents/parser/: agent.py
DepGuardian/agents/parser/.well-known/: agent.json
DepGuardian/agents/parser/tools/: read_uploaded_file.py
DepGuardian/agents/reporter/: agent.py  prompt.py
DepGuardian/common/: a2a_client.py  a2a_server.py  logger.py
DepGuardian/utils/: date_format.py  fetch_npm_download_stats.py  fetch_npm_vulnerabilties.py  fetch_pypi_download_stats.py  minimize_npm_metadata.py  minimize_pypi_metadata.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/client/: App.tsx  global.css
frontend/client/components/: BottomNav.tsx  Header.tsx  ProgressLoader.tsx
frontend/client/hooks/: useDocumentTitle.ts
frontend/client/pages/: HowItWorks.tsx  Index.tsx  NotFound.tsx  PackageDetail.tsx  Report.tsx  Reports.tsx  Upload.tsx
frontend/client/utils/: deleteUtils.tsx  packageUtils.tsx
tests/: test_analyzer.py  test_fetcher.py  test_parser.py  test_reporter.py
(+1 files in other folders)
