[project]
name = "DepGuardian"
version = "0.1.0"
description = "An AI-powered agent that monitors and audits your dependencies for risk, updates, and health — built with Google ADK and Gemin"
authors = [
    { name = "Royston D'Almeida "},
]
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "google-genai>=1.16.1",
    "google-adk[eval]>=1.0.0",
    "uvicorn>=0.38.0",
    "dotenv>=0.9.9",
]

requires-python = ">=3.10,<3.13"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]

# Add the project root to Python's import path
# This lets pytest import your package without needing installation
pythonpath = "."

# Create a fresh asyncio event loop for every test function
# Prevents cross-test interference and loop reuse errors
asyncio_default_fixture_loop_scope = "function"
